@@ -12,3 +12,4 @@
 2024-01-25T10:23:07.731Z |            3.2.1 | fix
 2024-01-25T16:37:23.157Z |            3.2.2 | Fix select extra fields
 2024-01-25T16:37:55.257Z |            3.3.0 | Added twig include
+2024-01-26T14:03:01.759Z |            3.4.0 | Rilevazione dimensione immagini anche per `filetype=auto`
